<resources>
    <string name="app_name">World Organizations</string>
    <string name="splashscreenimage">Splash Screen Image</string>
    <string name="important_note">Please keep the dark mode off to view the flags of the countries in a better way</string>
    <string name="delete_image">Delete Image</string>
    <string name="reload_image">Reload Image</string>
    <string name="flag_image">Flag Images</string>
    <string name="countries_information">Countries Information</string>
    <string name="european_union">European Union</string>
    <string name="european_tree_trade_association">European Tree Trade Association</string>
    <string name="caribbean_community">Caribbean Community</string>
    <string name="pacific_alliance">Pacific Alliance</string>
    <string name="african_union">African Union</string>
    <string name="union_of_south_american_nations">Union of South American Nations</string>
    <string name="eurasian_economic_union">Eurasian Economic Union</string>
    <string name="arab_league">Arab League</string>
    <string name="association_of_southeast_asian_nations">Association of Southeast Asian Nations</string>
    <string name="central_american_integration_system">Central American Integration System</string>
    <string name="central_european_free_trade_agreement">Central European Free Trade Agreement</string>
    <string name="north_american_free_trade_agreement">North American Free Trade Agreement</string>
    <string name="south_asian_association_for_regional_cooperation">South Asian Association for Regional Cooperation</string>
    <string name="moreMenu">More Menu</string>
    <string name="more_options">More Options</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_condition">Terms And Condition</string>
    <string name="for_developer">For Developer</string>
    <string name="website">Website</string>
    <string name="youtube">YouTube</string>
    <string name="todo">TODO</string>
</resources>