<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:background="@drawable/splashscreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/holo_red"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:fontFamily="@font/regular"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/refresh"
            android:layout_marginEnd="8dp"
            app:tint="@color/white"
            android:contentDescription="@string/reload_image" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/delete"
            app:tint="@color/white"
            android:contentDescription="@string/delete_image" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/menu"
            app:tint="@color/white"
            android:contentDescription="@string/delete_image" />

        <ImageView
            android:id="@+id/more"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/settings"
            android:layout_marginStart="6dp"
            app:tint="@color/white"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="9sp"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >

            <TextView
                android:id="@+id/Message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/important_note"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/associationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:fontFamily="@font/regular"
        android:background="@color/black"
        android:textColor="@color/white"
        android:padding="5dp"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp" />

</LinearLayout>